# DSLsofMath

./: .gitignore  Course2016.md  Course2017.md  Course2018.md  DSL_def.txt  DSLsofMath.cabal  DSLsofMath.md  LICENSE  README.md  VerificationValidation.md  glossary.org  prerequisites.md  related_courses.org  stack.yaml
2016/: Course2016.md  DSLsofMath.cabal  README.md  glossary.org  overview2016.md
2017/: Course2017.md  CourseReport.md  ToCover.md  log.txt  overview.md
2018/: README.md  archiving.md
2019/: L1.2.admin.txt
2021/: REAME.md
Assignments/: Assignment01.lhs  Assignment02.lhs  Makefile  README.md  schedule.md  schedule2.md
BScProj/: DSLsofMath_andra_kurser.md
Course-memo/: DSLsofMath.md  Makefile  template.tex
E/: AbstractFOL.lhs  README.md  W1.md  W3.lhs  W4.lhs  W5.lhs  W5.md  W6.md  W6notes.md
Exam/: MockE.hs  PracticeExam.lhs  README.org
Exam/2025-08/: DSLsofMathExam202508.cabal  PS.lhs  README.org  Solution_202508_Algebra.lhs  Solution_202508_Laplace.lhs  Solution_202508_Proof.lhs
Excercises/: W2.lhs  W3.lhs  W3notes.lhs
Exercises/: Arithmetic.lhs  Exercises-2016-01-20.lhs  Exercises-2016-01-27--28.lhs  Exercises-2016-02-04.lhs  Exercises-2016-02-10--11.md  Exercises-2016-02-18.lhs  Exercises-2016-02-24--25.md  FOL.lhs  README.md  Ring.hs
FLABloM/: ClosedSemiNearRingRecord.agda  ClosedSemiNearRingRecord.lagda  ClosedSemiRingRecord.lagda  Closure.agda  LiftCSNR.lagda  LiftCSR.lagda  LiftSNR.agda  LiftSNR.lagda  LiftSR.agda  LiftSR.lagda  Matrix.agda  Matrix.lagda  Preliminaries.lagda  ProjectCourse.md  README.md  SemiNearRingRecord.agda  SemiNearRingRecord.lagda  SemiRingRecord.agda  SemiRingRecord.lagda  Shape.agda  Shape.lagda  SquareMatrix.agda  TODO.org
HCAR/: DSLsofMath.tex  hcar.sty
Hatlab/: Hatlab.cabal  ParameterizedCurves.hs  Plot.hs  README.md  Relations.hs
Hatlab/Examples/: Parameterized.hs  Parametrized.hs  Sets.hs  Shapes.hs
Hatlab/Hatlab-extension/: Relations.hs
Hatlab/src/Examples/: Parametrized.hs
Hatlab/src/Hatlab/: ParameterizedCurves.hs  ParametrizedCurves.hs  Plot.hs  Relations.hs
L/: .dir-locals.el  .gitignore  A2_Skeleton.lhs  A5_landscape.patch  A6_landscape.patch  BasicConcepts.md  BookLogo.org  DSLMtalk.lhs  DSLsofMath.cabal  DSLsofMath.lhs  DSLsofMathBook.lhs  DSLsofMathBookLogo.org  DSLsofMathNotes.lhs  End.lhs  L01.lhs  L02.lhs  L03.lhs  L04.lhs  L05.lhs  L06.lhs  L13.lhs  LICENSE  Makefile  README.org  RecEx.md  SolvedExercises.md  TestAll.lhs  backcover.txt  citations.txt  dslm.format  dslmagda.fmt  errata.org  index.lhs  log.org  log.txt  mapping-2016-2018.md  newunicodedefs.tex  pj.bib  ref.bib  shell.nix  (+2 more)
Lectures/: BasicConcepts.lhs  Lecture01.lhs  Lecture02.lhs  Lecture03.lhs  Lecture04.lhs  Lecture05.lhs  Lecture06.lhs  Lecture09.lhs  Lecture10.lhs  Lecture11.lhs  Lecture12.lhs  Lecture13.lhs  Makefile  TypingMaths.lhs  dslmagda.fmt  index.lhs  ref.bib
Lectures/07/: README.md  SignalShape.cabal  Vector.lhs  slides.html  stack.yaml
Lectures/07/ex1/: BareSignalExample.lhs  Derivative.lhs
Lectures/07/exe/: Main.hs
Lectures/07/src/: Animate.hs  BareSignalExample.lhs  Example.hs  Matrix.hs  Render.hs  Shape.hs  Signal.hs
Lectures/07/src/Signal/: Deep.hs  Example.hs
PedProj/: CommunicatingMathematics_Wells.md  README.md  advert.md
QualityProject/: README.md  README.txt
Wisla23/: Complex.lhs  DSLsofMath_Wisla23.lhs  HaskellIntro.lhs  README.org
admin/: JanssonIonescuBernardyDSLsofMathBook2022.bib
aux/: Makefile  ref.bib  template.tex
code/: Derive.lhs  EvalD.lhs  Expr.lhs  FunNumInst.lhs  ShallowD.lhs
comp/: ref.bib  (+4 more)
(+685 files in other folders)
