name:                Hatlab
version:             0.1.0.0
-- homepage:            http://github.com/githubuser/Hatlab#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Björn von Sydow
-- maintainer:          example@example.com
-- copyright:           2015 Author Here
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Plot
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , process
  default-language:    Haskell2010
